--- a/.env
+++ b/.env
@@ -27,6 +27,7 @@ APP_SECRET=f89c63d88a03232401beae5b3070ebc1
  DATABASE_URL="mysql://root:@127.0.0.1:3306/finall"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+MAILER_DSN=gmail://heelos.gcfhvgjbhknj@gmail.com:fbubwijawfdcvesg@default?verify_peer=0
 
 ###> symfony/messenger ###
 # Choose one of the transports below
@@ -38,3 +39,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
